# rethinker-promptforge

./: .gitignore  .gitmodules  README.md  pyproject.toml
configs/: forge_tasks.yaml  forge_tasks_smoke.yaml  models.yaml  robot.yaml
data/tasks/: hello_tasks.yaml  real_tasks.yaml
docs/: task_definitions.md
scripts/: evaluate_real.py  run_evaluation.py  run_forge.py  run_hello_loop.py  run_rethinker.py  setup_robottwin_assets.py
src/baselines/: __init__.py  monolithic_planner.py  no_hidden_hypothesis.py  no_reflection.py  schema.py
src/common/: __init__.py  _memory_base.py  logger.py  schema.py
src/evaluation/: __init__.py  batch.py  harness.py
src/executor/: __init__.py  agent.py  memory.py  primitives.py  schema.py
src/forge/: __init__.py  actions.py  critic.py  env.py  loader.py  memory.py  optimizer.py  planner_agent.py  recorder.py  registry.py  runner.py  validator.py
src/llm/: __init__.py  cloud_critic.py  parser.py  vllm_client.py
src/perception/: __init__.py  dino_client.py
src/planner/: __init__.py  agent.py  memory.py  schema.py
src/rethinker/: __init__.py  agent.py  memory.py  runner.py  schema.py
src/rethinker_promptforge/: __init__.py  config.py
src/robot/: __init__.py  interface.py  robottwin_env.py  state.py
src/tasks/: loader.py  schema.py
tests/integration/: test_baselines_loop.py  test_closed_loop.py  test_dino_client_integration.py  test_evaluate_real_cli.py  test_forge_loop.py  test_forge_training_loop.py
tests/unit/: test_baselines.py  test_batch_runner.py  test_cloud_critic.py  test_common_schema.py  test_critic.py  (+25 more)
(+19 files in other folders)
